# vscode-sockpuppet-python

./: .flake8  .gitignore  404.html  DEVELOPMENT.md  DOCS_AUTOMATION.md  LICENSE  README.md  README_STANDALONE.md  WEBVIEW_ISSUES.md  docs.py  example.py  example_events.py  example_webview.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  test.yml
api/: index.html
api/client/: index.html
api/configuration/: index.html
api/diagnostics/: index.html
api/document/: index.html
api/editor/: index.html
api/events/: index.html
api/filesystem/: index.html
api/filewatcher/: index.html
api/language_model/: index.html
api/progress/: index.html
api/statusbar/: index.html
api/tabs/: index.html
api/terminal/: index.html
api/types/: index.html
api/webview/: index.html
api/window/: index.html
api/workspace/: index.html
docs/: DOCS_AUTOMATION.md
docs_src/: README.md  index.md
docs_src/api/: client.md  configuration.md  diagnostics.md  document.md  editor.md  events.md  filesystem.md  filewatcher.md  index.md  language_model.md  progress.md  statusbar.md  tabs.md  terminal.md  types.md  webview.md  window.md  workspace.md
docs_src/getting-started/: examples.md  installation.md  quickstart.md
examples/: example.py  example_advanced_editor.py  example_configuration.py  example_decorations.py  example_document.py  example_document_properties.py  example_editor_flexible_types.py  example_environment.py  example_event_driven_shutdown.py  example_events.py  example_events_comprehensive.py  example_events_vscode_style.py  example_external_uri.py  example_file_dialogs.py  example_filewatcher.py  example_high_value_features.py  example_language_model.py  example_position_range_helpers.py  example_tabs.py  example_terminal.py  example_webview.py  example_webview_chart.py  example_webview_debug.py  example_webview_dispose.py  example_webview_forms.py  example_webview_resources.py  example_webview_visibility.py  example_workspace_edit.py  example_workspace_operations.py
getting-started/examples/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/github-pages-setup/: index.html
search/: search_index.json
tests/: test_event_emitter_local.py  test_webview_dispatch.py
vscode_sockpuppet/: __init__.py  client.py  configuration.py  diagnostics.py  document.py  editor.py  events.py  filewatcher.py  fs.py  language_model.py  progress.py  statusbar.py  tabs.py  terminal.py  webview.py  window.py  window_types.py  workspace.py
vscode_sockpuppet/events/: __init__.py  core.py  tabs.py  watcher.py  webview.py  window.py  workspace.py
